add test server

--- a/test/nginx/nginx.conf
+++ b/test/nginx/nginx.conf
@@ -39,31 +39,37 @@ http {
     # gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
 
-    # Jenkins upstream
-    upstream app_server {
-        server 127.0.0.1:8080 fail_timeout=0;
+    # web tier upstream
+    upstream web_server {
+        server 127.0.0.1:9501 fail_timeout=0;
+        server 127.0.0.1:9502 fail_timeout=0;
     }
 
-    # main server config
+    # web tier config
     server {
-        listen 80;
-        listen [::]:80 default ipv6only=on;
+        listen 9500;
+        listen [::]:9500 default ipv6only=on;
 
         # jenkins
-        location /jenkins/ {
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $http_host;
-            proxy_redirect off;
-
-            if (!-f $request_filename) {
-                proxy_pass http://app_server;
-                break;
-            }
+        location / {
+            proxy_pass http://web_server;
         }
+    }
 
-        # static content
-        location /nexus/ {
-            root /build;
+    # app tier upstream
+    upstream app_server {
+        server 127.0.0.1:9401 fail_timeout=0;
+        server 127.0.0.1:9402 fail_timeout=0;
+    }
+
+    # app tier config
+    server {
+        listen 9400;
+        listen [::]:9400 default ipv6only=on;
+
+        # jenkins
+        location / {
+            proxy_pass http://app_server;
         }
     }
 }
