--- a/elk/elasticsearch/elasticsearch.yml
+++ b/elk/elasticsearch/elasticsearch.yml
@@ -209,7 +209,7 @@
 
 # Set both 'bind_host' and 'publish_host':
 #
-#network.host: 192.168.0.1
+network.host: localhost
 
 # Set a custom port for the node to node communication (9300 by default):
 #
@@ -383,6 +383,3 @@
 # it unless you need it is recommended (it is disabled by default).
 #
 #http.jsonp.enable: true
-
-http.cors.enabled: true
-#http.cors.allow-origin: 
